--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,17 @@ li:hover a {
     color: black !important;
     cursor: pointer;
 }
-
+#narr{
+    height: 0;
+    width: 0;
+    border-left:30px solid transparent;
+    border-bottom:30px solid #fff ;
+    position: absolute;
+    right:12px;
+    top:67px;
+    display: block;
+    visibility: hidden;
+}
 h1 {
     font-size: 55px !important;
     letter-spacing: 5px;
